Fix constant names set using const_set on a singleton class

Fixes [Bug #14895]